--- a/backend/package.json
+++ b/backend/package.json
@@ -1,11 +1,15 @@
 {
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.3",
     "express": "^4.21.0",
     "express-graphql": "^0.12.0",
     "graphql": "^15.9.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
-    "nodemon": "^3.1.7"
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.1.7",
+    "validator": "^13.12.0"
   },
   "scripts": {
     "start": "nodemon server.js"
